# rust-protobuf

protobuf-codegen/: Cargo.toml
protobuf-codegen-pure/: Cargo.toml
protobuf-codegen/src/: field.rs
protobuf-test/: Cargo.toml  build.rs
protobuf-test-common/: Cargo.toml
protoc-rust/: Cargo.toml
protoc-rust/src/: lib.rs
