[package]
name = "protoc-rust-no-elision"
version = "2.0.4"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ChosunOne/rust-protobuf/tree/master/protoc-rust"
repository = "https://github.com/ChosunOne/rust-protobuf/tree/master/protoc-rust"
description = """
protoc --rust_out=... available as API. protoc needs to be in $PATH, protoc-gen-run does not.
"""

[lib]
doctest = false
bench = false

[dependencies]
protoc = { path = "../protoc", version = "=2.0.4" }
protobuf = { path = "../protobuf", version = "=2.0.4" }
protobuf-codegen = { path = "../protobuf-codegen", version = "=2.0.4" }
tempdir  = "~0.3"
